# svc

./: .gitattributes  .gitignore  .projectile  BOOTSTRAP.md  Makefile  README.md  flake.nix  svc.sh
crypt/: .gitignore  README.md  crypt-add-gpg-keys.sh  gpg-add-keys-to-repository.sh  gpg-gen-script.tpl  gpg-make-key.sh
crypt/gpg/: gpg-PVE.id  gpg-PVE.key  gpg-ZALANDO-62244.id  gpg-ZALANDO-62244.key  gpg-ZALANDO-62308.id  gpg-ZALANDO-62308.key  gpg-ZALANDO-83117.id  gpg-ZALANDO-83117.key  gpg-pve.id  gpg-pve.key
infrastructure/aws/: .gitignore  .terraform.lock.hcl  Makefile  aws-credentials.crypt  heinrichhartmann_com.tf  heinrichhartmann_net.tf  lenas_staudengarten_de.tf  main.tf  terraform.tfstate
infrastructure/letsencrypt/: Makefile  README.md  aws-config.crypt  aws-credentials.crypt  certbot.sh  flake.nix  pyproject.toml
lib/: include.mk  include.sh
nixos/: Makefile  configuration.nix  flake.nix  hardware-configuration.nix  network-configuration.nix  result
nixos/conf/: promtail.yaml
nixos/etc/: authorized_keys  configuration.nix  flake.nix  fluentbit.conf  hardware-configuration.nix  network-configuration.nix  promtail.yaml  svc-configuration.nix  zfs-configuration.nix
nixos/modules/: monitoring.nix  svc-configuration.nix  svc-services.nix  tailscale.nix
services/_template/: Makefile  docker-compose.yaml
services/airflow/: .env  Makefile  docker-compose.yaml
services/amp/: Makefile  docker-compose.yaml
services/blog/: Makefile  docker-compose.yaml
services/books/: Makefile  docker-compose.yaml
tools/: gitenv.sh  inventory.sh
(+100 files in other folders)
