[tool.poetry]
name = "letsencrypt"
version = "0.1.0"
description = ""
authors = ["Heinrich Hartmann <derhein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
certbot = "^1.22.0"
certbot-dns-route53 = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
